--- a/xcode/App/settings.plist
+++ b/xcode/App/settings.plist
@@ -2,17 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>url</key>
+	<string>file://hello.json</string>
+	<key>append_nonce_to_url</key>
+	<false/>
 	<key>client_id</key>
 	<string></string>
 	<key>client_secret</key>
 	<string></string>
-	<key>loading</key>
-	<false/>
 	<key>launch</key>
 	<string></string>
-	<key>url</key>
-	<string>file://hello.json</string>
 	<key>debug</key>
+	<false/>
+	<key>loading</key>
 	<false/>
 </dict>
 </plist>
