--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -1,5 +1,5 @@
-platform :ios, '9.0'
-#inhibit_all_warnings!
+platform :ios, '12.0'
+inhibit_all_warnings!
 use_frameworks!
 
 target 'Jasonette' do
