Customizing app for africultures

--- a/xcode/App/settings.plist
+++ b/xcode/App/settings.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>url</key>
-	<string>file://hello.json</string>
+	<string>file://home.json</string>
 	<key>append_nonce_to_url</key>
 	<false/>
 	<key>client_id</key>
